<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rand\'On</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    
    <string name="activity_map_title">Map</string>
    
    <!-- Common -->
    <string name="neutral_button">OK</string>
    <string name="positive_button">Yes</string>
    <string name="negative_button">No</string>
    <string name="no_item">There is no hike yet</string>
    <string name="try_again">Try again</string>
    <string name="quit">Quit</string>
    
    <!-- Connexion activity -->
    <string name="background_description">Mountain landscape</string>
    <string name="user_name">Login</string>
    <string name="user_password">Password</string>
    <string name="connexion">Connexion</string>
    <string name="create_account">New to Rand\'On? Click </string>
    <string name="click_here">here</string>
    <string name="connexion_fail">Connexion failed, please check your login and password</string>
    <string name="connexion_success">Connexion succeeded</string>
    <string name="request_failed">Failed to reach server</string>
    <string name="too_many_attempt_to_connect">You failed to connect too many times, wait a moment before trying again</string>
    <string name="connection_dialog">Connecting...</string>

    <!-- Create Account activity -->
    <string name="confirm_user_password">Confirm password</string>
    <string name="user_email">Email</string>
    <string name="button_create_account">Create a new account</string>
    <string name="empty_fields">All fields must be filled in</string>
    <string name="password_not_confirmed">The password and the confirmed password must be exactly the same</string>
    <string name="account_creation_success">Your account has been successfully created</string>
    <string name="account_creation_already_exists">This username already exists, please choose a new one</string>
    <string name="account_creation_failure">An error occurred during account creation</string>
	<string name="uncorrect_email">Email format is not correct</string>
	<string name="creation_dialog">Creating account...</string>
	
	<!-- New Hike Activity -->
    <string name="starting_new_hike">Ready for a new hike?</string>
    <string name="button_newHike">Start!</string>
	
	<!-- Main activity -->
	<string name="logout_failed">Unable to logout, please log in and try again</string>
	<string name="exit_app">Press back button again if you want to close Rand\'on</string>
	
	<!-- Map Activity -->
    <string name="distance_done">Distance done: </string>
    <string name="speed">Average speed: </string>
    <string name="duration">Duration: </string>
    <string name="positive_difference_in_height">Positive difference in height: </string>
    <string name="negative_difference_in_height">Negative difference in height: </string>
    <string name="gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="finishing_hike">Finish hike</string>
    <string name="exit_confirmation">You are about to quit the map, your path will be lost. Do you want to save it?</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_quit">Don\'t save</string>
    
    <!-- Finish Hike Activity -->
    <string name="hike_name">Hike name: </string>
    <string name="difficulty">Difficulty</string>
    <string name="interest">Interest</string>
    <string name="reliability">Reliability</string>
    <string name="comments">Comments</string>
    <string name="share_hike">Share my hike</string>
    <string name="save_hike">Save</string>
    <string name="share_hike_succeded">Your hike has been shared!</string>
    <string name="name_your_hike">You have to give a name to your hike before uploading it.</string>
    <string name="name_already_exists">Hike name already exists. You should change it.</string>
    <string name="empty_hike">Your hike is empty</string>
    <string name="finished">Completed hike!</string>
    <string name="marks">Marks</string>
    <string name="uploading_hike">Uploading your hike to server...</string>
    <string name="no_location_found">No location found</string>
    
    <!-- Search Hikes Activity -->
    <string name="distance">Distance: </string>
    <string name="distance_unit_km">km</string>  
    <string name="hike_proximity">away</string>
    <string name="distance_unit_speed">km/h</string>  
    <string name="distance_unit_m">m</string>  
    <string name="fail_retrieving_hikes">Could not retrieve any hikes</string>
    <string name="average_mark">Average mark</string>
    <string name="proximity_search">Search closest hikes</string>
    <string name="retrieving_hikes">Retrieving hikes list...</string>
    <string name="retrieving_specific_hike">Retrieving hike\'s data...</string>
    <string name="no_provider_found">No location provider enabled. Please enable network or GPS and try again</string>
    
    <!-- Consulting Hike Activity -->
    <string name="download_hike">Download</string> 
	<string name="follow_this_hike">Follow this hike</string> 
	   
    <!-- Navigation item names -->
    <string name="hike_search_title">Search for a hike</string>
    <string name="new_hike_title">New hike</string>
    <string name="hike_list_title">My hikes</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Rand\'On !</string>

</resources>
