<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.insa.randon.controller.CreateAccountActivity" >
    
 	<TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/user_name"/>
 	<EditText
    	android:id="@+id/editText_user_name"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:inputType="text"/>   
    	
 	<TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/user_password"/>
 	<EditText
    	android:id="@+id/editText_password"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:inputType="textPassword"/> 
    	
 	<TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/confirm_user_password"/>
 	
 	<EditText
    	android:id="@+id/editText_confirm_password"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:inputType="textPassword"/> 
    	
 	<TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/user_email"/>
 	 
 	 <EditText
    	android:id="@+id/editText_email"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:inputType="textEmailAddress"/> 
    	
 	 <Button
        android:id="@+id/button_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_account" 
        android:onClick="onButtonClick"/>
    

</LinearLayout>
