<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.insa.randon.controller.HomeActivity" 
    android:gravity="center">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/image_accueil" />
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome" 
            android:layout_margin="20dp"/>
    
    <Button
        android:id="@+id/button_open_newHike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_hike_title" 
        android:textColor="@color/green_item"
        android:onClick="onButtonClick"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/button_open_hikeSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hike_search_title" 
        android:textColor="@color/green_item"
        android:onClick="onButtonClick"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/button_open_myHikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hike_list_title" 
        android:textColor="@color/green_item"
        android:onClick="onButtonClick"
        android:layout_margin="5dp"/>

</LinearLayout>