<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.insa.randon.controller.ConnexionActivity" >

    <ImageView
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:src="@drawable/background"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/grey_background"
        android:orientation="vertical" 
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/editText_user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/user_password" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onButtonClick"
            android:text="@string/connexion" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account" />

            <TextView
                android:id="@+id/textView_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onClick"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/click_here"
                android:textColor="@color/green_item" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>