<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_description"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/grey_background"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp" >
        
		<TextView 
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:text="@string/starting_new_hike"
		    android:layout_marginTop="20dp"
		    android:layout_marginBottom="20dp"
		    android:textSize="20sp"/>

        <Button
            android:id="@+id/button_newHike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_newHike" 
            android:layout_marginBottom="20dp"/>
        
    </LinearLayout>

</RelativeLayout>
