<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_panel_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    sothree:panelHeight="20dp"
    sothree:shadowHeight="4dp"
    tools:context="com.insa.randon.controller.MapActivity" >

    <ViewStub
        android:id="@+id/map_activity_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="20dp" >

            <ImageView
                android:id="@+id/sliding_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_action_expand" 
                android:layout_centerInParent="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop= "10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/distance_done"
                android:textSize="20sp"
                android:textColor="@color/green_item"/>

            <TextView
                android:id="@+id/distance_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" 
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/speed"
                android:textSize="20sp"
                android:textColor="@color/green_item" />

            <TextView
                android:id="@+id/speed_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" 
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/duration"
                android:textSize="20sp"
                android:textColor="@color/green_item" />

            <TextView
                android:id="@+id/duration_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" 
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/positive_difference_in_height"
                android:textSize="20sp"
                android:textColor="@color/green_item" />

            <TextView
                android:id="@+id/positive_altitude_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" 
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/negative_difference_in_height"
                android:textSize="20sp"
                android:textColor="@color/green_item" />

            <TextView
                android:id="@+id/negative_altitude_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp" 
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>